# kitties-api-v2

./: CMakeLists.txt  README.md
src/: app.cpp
src/advisors/: error_handler.cpp
src/configs/: app_component.hpp  database_component.hpp  swagger_component.hpp
src/controllers/: kitty_controller.hpp  static_controller.hpp
src/dtos/: status.hpp
src/entities/: kitty_entity.hpp
src/include/: configurations.h  controllers.h  dtos.h  entities.h  error_handler.h  kitty_service.h  models.h  repositories.h
src/models/: page.hpp
src/repos/: kitty_repository.hpp
src/resources/: db.sqlite
src/resources/sql/: 001_init.sql
src/services/: kitty_service.cpp
test/: tests.cpp
test/app/: test_client.hpp
test/app/config/: test_component.hpp  test_database_component.hpp
test/include/: kitty_controller_test.h  test_configurations.h
test/tests/: kitty_controller_test.cpp
